--- a/expense_tracker/src/asset/css/App.css
+++ b/expense_tracker/src/asset/css/App.css
@@ -15,6 +15,7 @@ display: flex;
 flex: 1;
 align-items: center;
 justify-content:center;
+flex-direction: column;
 }
 
 .leftcontainer img{
@@ -22,11 +23,19 @@ justify-content:center;
   width: 60%;
   border-radius: 12px;
 }
+.leftcontainer p{
+  margin-bottom: 20px;
+  font-size: 24px;
+  font-weight: bold;
+
+}
 
 .rightcontainer{
   background-image: linear-gradient(lightgray,white);
-  display: flex;
+  display:flex;
   flex: 1;
+  align-items: center;
+  justify-content:center;
 
 }
 
@@ -46,4 +55,31 @@ border-bottom: 1px solid gray;
   height: 4%;
   margin-right: 12px;
  
+}
+
+.formcard{
+  background-color: #fff;
+  width: 60%;
+  height: 60%;
+  border-radius: 12px;
+  box-shadow: 4px 4px 24px 0px black;
+  padding: 12px;
+
+
+ 
+}
+.formcard div{
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 20px;
+}
+.formcard input{
+  margin-top: 8px;
+  width: 100%;
+  height: 24px;
+
+}
+
+.formcard label{
+  
 }
