--- a/expense_tracker/src/asset/css/Register.css
+++ b/expense_tracker/src/asset/css/Register.css
@@ -5,5 +5,5 @@
     align-items: center;
     justify-content:center;
     justify-items: center;
-    padding-top: 50px;
+    height: 100dvh;
     }
