--- a/expense_tracker/src/asset/css/App.css
+++ b/expense_tracker/src/asset/css/App.css
@@ -2,6 +2,17 @@
   margin: 0;
   padding: 0;
 }
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
 html,
 body{
   overflow:hidden;
@@ -19,6 +30,8 @@ flex: 1;
 align-items: center;
 justify-content:center;
 flex-direction: column;
+overflow-y: scroll;
+padding: 40px;
 }
 
 .leftcontainer img{
@@ -74,7 +87,7 @@ border-bottom: 1px solid gray;
   flex-direction: column;
   margin-bottom: 20px;
 }
-.formcard input{
+.formcard input,select{
   margin-top: 8px;
   width: 100%;
   height: 30px;
@@ -101,4 +114,12 @@ border-bottom: 1px solid gray;
 }
 .formcard button:hover{
   background-color: gray;
+}
+
+.expenseCard{
+  background-color: white;
+  border: 1px solid black;
+  width: 80%;
+  padding: 20px;
+  margin-bottom: 5px;
 }
