new modals added and ui enhancements

--- a/expense_tracker/src/asset/css/App.css
+++ b/expense_tracker/src/asset/css/App.css
@@ -93,6 +93,8 @@ border-bottom: 1px solid gray;
   border-radius: 12px;
   border: 1px solid black;
   padding-left: 8px;
+  box-sizing: border-box;
+  padding-right: 8px;
 
 }
 
@@ -123,21 +125,9 @@ border-bottom: 1px solid gray;
   margin-bottom: 5px;
 }
 
-.dropdown {
-  float: left;
-  overflow: hidden;
-}
 
-.dropdown .dropbtn {
-  font-size: 16px;  
-  border: none;
-  outline: none;
-  color: black;
-  padding: 14px 16px;
-  background-color: inherit;
-  font-family: inherit;
-  margin: 0;
-}
+
+
 
 .navbar a:hover, .dropdown:hover .dropbtn {
   background-color: lightgray;
@@ -150,9 +140,10 @@ border-bottom: 1px solid gray;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
+  right: 0;
 }
 
-.dropdown-content a {
+.dropdown-content p {
   float: none;
   color: black;
   padding: 12px 16px;
@@ -161,10 +152,70 @@ border-bottom: 1px solid gray;
   text-align: left;
 }
 
-.dropdown-content a:hover {
+.dropdown-content p:hover {
   background-color: #ddd;
 }
 
 .dropdown:hover .dropdown-content {
   display: block;
+}
+
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+.modal2 {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  justify-items: center;
+}
+.modal1 {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  justify-items: center;
+}
+
+/* Modal Content */
+.modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+}
+.modal-content button{
+  height: 20px;
+  border: none;
+  background-color: black;
+  color: #fff;
+  font-weight: bold;
+  width: 80px;
+  margin-right: 10px;
 }
